--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <img src="naila.jpg" alt="Foto 4" class="photo">
         </div>
         <div class="name-row">
-          <a href="#" class="ig-btn">Naila Sarifudin</a>
+          <a href="#" class="ig-btn">Naila Syarifa Putri</a>
         </div>
       </div>
       <!-- Anggota 5 -->
