--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
   </div>
 
   <!-- AUDIO -->
-  <audio id="bgMusic" src="lagu.mp3"></audio>
+  <audio id="bgMusic" src="mangu.mp3"></audio>
 
   <script>
     const popup = document.getElementById('popup');
