--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <img src="bunga.jpg" alt="Foto 1" class="photo">
         </div>
         <div class="name-row">
-          <a href="#" class="ig-btn">Bunga Sri Rahayu</a>
+          <a href="https://www.instagram.com/yurahyu_" class="ig-btn">Bunga Sri Rahayu</a>
         </div>
       </div>
       <!-- Anggota 2 -->
@@ -213,7 +213,7 @@
           <img src="farah.jpg" alt="Foto 2" class="photo">
         </div>
         <div class="name-row">
-          <a href="#" class="ig-btn">Farah Nur Safriya</a>
+          <a href="https://www.instagram.com/xxyfa.24" class="ig-btn">Farah Nur Safriya</a>
         </div>
       </div>
       <!-- Anggota 3 -->
@@ -223,7 +223,7 @@
           <img src="indah.png" alt="Foto 3" class="photo">
         </div>
         <div class="name-row">
-          <a href="#" class="ig-btn">Ayu Indah Dwi Lestari</a>
+          <a href="https://www.instagram.com/yulstari_" class="ig-btn">Ayu Indah Dwi Lestari</a>
         </div>
       </div>
       <!-- Anggota 4 -->
@@ -233,7 +233,7 @@
           <img src="naila.jpg" alt="Foto 4" class="photo">
         </div>
         <div class="name-row">
-          <a href="#" class="ig-btn">Naila Syarifa Putri</a>
+          <a href="https://www.instagram.com/xzvnayy_" class="ig-btn">Naila Syarifa Putri</a>
         </div>
       </div>
       <!-- Anggota 5 -->
@@ -243,7 +243,7 @@
           <img src="salwa.png" alt="Foto 5" class="photo">
         </div>
         <div class="name-row">
-          <a href="#" class="ig-btn">Salwa Nur Latifah</a>
+          <a href="https://www.instagram.com/_awaaa288" class="ig-btn">Salwa Nur Latifah</a>
         </div>
       </div>
     </div>
